--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&display=swap" rel="stylesheet">
     <title>Music App</title>
 </head>
 
@@ -17,7 +18,7 @@
             <div class="intro-circle"></div>
             <div class="intro-circle"></div>
         </div>
-        <div id="game-title">catchy tunes</div>
+        <div id="game-title" class="title">catchy <br> tunes</div>
     </div>
     <div id="game">
 
@@ -38,7 +39,7 @@
         <div id="progress-bar">
             <div id="arrow">
                 <div id="next-song">next song</div>
-                <div id="skip-icon">&gt;</div>
+                <div id="skip-icon"></div>
             </div>
             <div id="progress"></div>
         </div>
